--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dev": "nodemon index.js"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2"
   },
   "dependencies": {
     "@clerk/clerk-sdk-node": "^4.13.23",
